--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
-@import '../app/shared/styles/variables';
-@import '../app/shared/styles/mixins';
+@use '../app/shared/styles/variables' as v;
+@use '../app/shared/styles/mixins' as m;
 
 :host {
   display: block;
