--- a/src/app/components/service-item/service-item.component.scss
+++ b/src/app/components/service-item/service-item.component.scss
@@ -1,25 +1,25 @@
-@import '../../../app/shared/styles/variables';
-@import '../../../app/shared/styles/mixins';
+@use '../../../app/shared/styles/variables' as v;
+@use '../../../app/shared/styles/mixins' as m;
 
 .service-item {
   display: grid;
   grid-template-columns: 1fr;
   gap: 0;
   margin: 0;
-  background-color: $white;
-  border-radius: $border-radius-lg;
+  background-color: v.$white;
+  border-radius: v.$border-radius-lg;
   overflow: hidden;
-  box-shadow: $shadow;
+  box-shadow: v.$shadow;
   min-height: 100vh;
   height: 100vh;
   
-  @include respond-to(md) {
+  @include m.respond-to(md) {
     grid-template-columns: 1fr 1fr;
     align-items: stretch;
   }
   
   &.reverse {
-    @include respond-to(md) {
+    @include m.respond-to(md) {
       direction: rtl;
       
       .service-content {
@@ -34,7 +34,7 @@
   height: 50vh;
   overflow: hidden;
   
-  @include respond-to(md) {
+  @include m.respond-to(md) {
     height: 100vh;
   }
   
@@ -42,7 +42,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: $transition-slow;
+    transition: v.$transition-slow;
     display: block;
     
     &:hover {
@@ -55,21 +55,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: $spacing-xl;
-  background-color: $white;
+  padding: v.$spacing-xl;
+  background-color: v.$white;
   height: 50vh;
   
-  @include respond-to(md) {
+  @include m.respond-to(md) {
     height: 100vh;
-    padding: $spacing-xxl;
+    padding: v.$spacing-xxl;
   }
   
   h3 {
-    color: $gold;
-    margin-bottom: $spacing-md;
+    color: v.$gold;
+    margin-bottom: v.$spacing-md;
     position: relative;
-    padding-bottom: $spacing-sm;
-    font-size: $font-size-xl;
+    padding-bottom: v.$spacing-sm;
+    font-size: v.$font-size-xl;
     
     &::after {
       content: '';
@@ -78,15 +78,15 @@
       bottom: 0;
       width: 70px;
       height: 3px;
-      background: linear-gradient(to right, $primary-green, $accent-green);
+      background: linear-gradient(to right, v.$primary-green, v.$accent-green);
     }
   }
   
   p {
-    color: $secondary-green;
+    color: v.$secondary-green;
     margin-bottom: 0;
     line-height: 1.8;
-    font-size: $font-size-base;
+    font-size: v.$font-size-base;
     max-width: 600px;
   }
 }
@@ -100,14 +100,14 @@
       &::after {
         left: auto;
         right: 0;
-        background: linear-gradient(to left, $primary-green, $accent-green);
+        background: linear-gradient(to left, v.$primary-green, v.$accent-green);
       }
     }
   }
   
   .service-item {
     &.reverse {
-      @include respond-to(md) {
+      @include m.respond-to(md) {
         direction: ltr;
         
         .service-content {
